--- a/_posts/2015-10-14-VDL_at_vis.md
+++ b/_posts/2015-10-14-VDL_at_vis.md
@@ -4,4 +4,9 @@ title:  VDL at IEEE Vis
 date:   2015-10-14 20:00:00
 categories: event
 ---
-Members of VDL will be at IEEE VIS in Chicago. We will be presenting multiple papers and also host a party together with other SCI members! Make sure to say hi.
+Members of VDL will be at IEEE VIS in Chicago. We will be presenting multiple papers and also host a party together with other SCI members! Make sure to say hi, come to our talks and to the Party.
+
+Our papers are: 
+
+ * [Unlocking User-Centered Design Methods for Building Cyber Security Visualizations](publications/2015_vizsec_design-methods/), Monday, 4:15-5:05pm Session (~4:30pm), VizSec, Room: State
+ * [Vials: Visualizing Alternative Splicing of Genes](publications/2015_infovis_vials/), Wednesday, 8:30-10:10am Session (~9:30), InfoVis, Room: Grand
