added sam's papers

--- a/_posts/2015-10-14-VDL_at_vis.md
+++ b/_posts/2015-10-14-VDL_at_vis.md
@@ -8,5 +8,7 @@ Members of VDL will be at IEEE VIS in Chicago. We will be presenting multiple pa
 
 Our papers are: 
 
+ * [Towards Ecological Validity in Evaluating Uncertainty](publications/2015_vdmu_ecological-validity/), Monday, 3:20-3:40pm, Visualization for Decision Making Under Uncertainty Workshop, Room: Empire
  * [Unlocking User-Centered Design Methods for Building Cyber Security Visualizations](publications/2015_vizsec_design-methods/), Monday, 4:15-5:05pm Session (~4:30pm), VizSec, Room: State
- * [Vials: Visualizing Alternative Splicing of Genes](publications/2015_infovis_vials/), Wednesday, 8:30-10:10am Session (~9:30), InfoVis, Room: Grand
+ * [Visually Comparing Weather Features in Forecasts](publications/2015_infovis_weaver/), Wednesday, 8:30-10:10 Session (~9:10), InfoVis, Room: Grand
+ * [Vials: Visualizing Alternative Splicing of Genes](publications/2015_infovis_vials/), Wednesday, 8:30-10:10 Session (~9:30), InfoVis, Room: Grand
