--- a/_posts/2016-10-25-VDL_at_vis.md
+++ b/_posts/2016-10-25-VDL_at_vis.md
@@ -10,5 +10,6 @@ Our activities are:
  
  * Alex Bigelow is presenting [his paper on bridging between drawing tools and generative tools](http://vdl.sci.utah.edu/publications/2016_infovis_hanpuku/) in InfoVis. Check out the nice demos on a bridge between Adobe Illustrator on D3. 
  * Lace Padilla is presenting joint work with Sam Quinan and Miriah Meyer on Evaluating the Impact of Binning 2D Scalar Fields in InfoVis.
+ * Alex Bigelow shows his work on [Resonant Lab](http://vdl.sci.utah.edu/publications/2016_vip_resonant_lab/) for creating visualization components at the Workshop on Visualization in Practice. 
  * Nina McCurdy is presenting at BELIV on Action Design Research and Visualization Design. 
  * Alex Lex is hosting the [Visualization in Data Science Workshop](http://visualdatascience.org) on Monday.
