added sean's poster

--- a/_posts/2016-10-25-VDL_at_vis.md
+++ b/_posts/2016-10-25-VDL_at_vis.md
@@ -12,4 +12,5 @@ Our activities are:
  * Lace Padilla is presenting joint work with Sam Quinan and Miriah Meyer on Evaluating the Impact of Binning 2D Scalar Fields in InfoVis.
  * Alex Bigelow shows his work on [Resonant Lab](http://vdl.sci.utah.edu/publications/2016_vip_resonant_lab/) for creating visualization components at the Workshop on Visualization in Practice. 
  * Nina McCurdy is presenting at BELIV on Action Design Research and Visualization Design. 
+ * Sean McKenna presents his poster in the meet the candidate session. Get in touch with [Sean](http://mckennapsean.com/) if you want to learn more.
  * Alex Lex is hosting the [Visualization in Data Science Workshop](http://visualdatascience.org) on Monday.
