move all bib info into pub entries

--- a/_publications/2014_bmc_mu8.md
+++ b/_publications/2014_bmc_mu8.md
@@ -3,7 +3,6 @@ layout: publication
 # The quotes make the : possible, otherwise you can do it without quotes
 title: "Mu-8: Visualizing Differences between Proteins and their Families "
 key: 2014_bmc_mu8
-permalink: /publications/2014_bmc_mu8/
 type: paper
 
 # The shortname is used for auto-generated titels
@@ -19,14 +18,20 @@ authors:
 - Nicolas Bonnel
 - pfister
 
-journal: BMC Proceedings, vol. 8, no. Suppl 2, p. S5
 year: 2014
+
+bibentry: article
+bib:
+  journal: BMC Proceedings
+  doi: 10.1186/1753-6561-8-S2-S5
+  url: http://www.biomedcentral.com/1753-6561/8/S2/S5/abstract
+  volume: 8
+  number: Suppl 2
+  pages: S5
+  month: aug
+
 # Add things like "Best Paper Award at InfoVis 2099, selected out of 4000 submissions" 
 award:
-
-doi: 10.1186/1753-6561-8-S2-S5
-# The publisher URL - use only if no doi is available
-publisher:
 
 # Use if this paper is linked to an internal project. This will link to the project site
 project:
@@ -48,8 +53,6 @@ supplement:
 supplements:
 
 # use link instead of abslink if you want to link to the master directory
-
-bibtex: 2014_bmc_mu8.bib
 
 abstract: "
 <h3>Background</h3>
