--- a/_posts/2017-09-28-VDL_at_vis.md
+++ b/_posts/2017-09-28-VDL_at_vis.md
@@ -12,7 +12,7 @@ The University of Utah will also join forces with the Universities of Washington
 Our activities at VIS are:
  
  * Sean McKenna (now at Lucid Software) presents his paper on [Worksheets for Guiding Novices through the Visualization Design Process](http://vdl.sci.utah.edu/publications/2017_pdv_daf-worksheets/).  
- * Alex Lex is hosting the [Visualization in Data Science Workshop](http://visualdatascience.org) on Sunday.
+ * Alex Lex is hosting the [Visualization in Data Science Workshop](http://visualdatascience.org/2017/) on Sunday.
  * Alex is also on a paper presented at VDS on [Visualization of Big Spatial Data using Coresets for Kernel Density Estimates](http://vdl.sci.utah.edu/publications/2017_vds_coresets/).
  * Alex Bigelow is presenting his poster on...
  * Carolina Nobre .. 
