added paper Pascal's presentation

--- a/_posts/2017-09-28-VDL_at_vis.md
+++ b/_posts/2017-09-28-VDL_at_vis.md
@@ -11,6 +11,7 @@ The University of Utah will also join forces with the Universities of Washington
 
 Our activities at VIS are:
  
+ * Pascal Goffin presents his paper on [An Exploratory Study of Word-Scale Graphics in Data-Rich Text Documents](https://hal.inria.fr/hal-01389998/document) on Thursday morning.
  * Sean McKenna (now at Lucid Software) presents his paper on [Worksheets for Guiding Novices through the Visualization Design Process](http://vdl.sci.utah.edu/publications/2017_pdv_daf-worksheets/).  
  * Alex Lex is hosting the [Visualization in Data Science Workshop](http://visualdatascience.org/2017/) on Sunday.
  * Alex is also on a paper presented at VDS on [Visualization of Big Spatial Data using Coresets for Kernel Density Estimates](http://vdl.sci.utah.edu/publications/2017_vds_coresets/).
