fixed a couple of broken links

--- a/_posts/2017-09-28-VDL_at_vis.md
+++ b/_posts/2017-09-28-VDL_at_vis.md
@@ -20,5 +20,5 @@ Our activities at VIS are:
  * Aspen Hopkins is presenting her poster on  [Particulates Matter: Assessing Needs for Air Quality Visualization](https://vimeo.com/230838122)
  * Sam Quinan is presenting his poster on [Hue Bands and Human Perception: Revisiting the Rainbow](https://vimeo.com/230838204)
  * Ethan Kerzner is wrapping up his PhD. If you're interested in hiring a soon-to-be graduate, [get in touch with him](http://ethankerzner.com/).
- * **Finally, [we're admitting students and are hiring postdocs](positions/).** Talk to Miriah or Alex for more info!
+ * **Finally, [we're admitting students and are hiring postdocs](http://vdl.sci.utah.edu/positions).** Talk to Miriah or Alex for more info!
  
