added blog page

--- a/_posts/2020-07-06-vdl-blog.md
+++ b/_posts/2020-07-06-vdl-blog.md
@@ -7,6 +7,7 @@ type: blog
 authors: 
  - lex
  - akbaba
+abstract: "tldr: We're starting a blog to communicate about our research and share our thoughts on data visualization!" 
 ---
 
 As of today, the Visualization Design Lab has a blog!
