docs: ✏️ Updated snippets

--- a/_posts/2020-10-28_trrack.md
+++ b/_posts/2020-10-28_trrack.md
@@ -79,29 +79,27 @@ State is usually a `javascript` object. If using `typescript` we can use `interf
 
 ```ts
 interface State {
-  selectedQuartet:string;
-  selectedNode:string;
-  hoveredNode:string;
+  todos: string[];
+  selected: number;
 };
 
-const initialState: NodeState = {
-  selectedQuartet: 'I',
-  selectedNode: 'none',
-  hoveredNode: 'none'
+const initialState: State = {
+  todos: [],
+  selected: -1
 }
 ```
 
 Additionally for `typescript` users, we recommend storing an event type object which all of your events will fall under. This ensures it is easy to identify the event associated with a node, and allows Trrack-Vis to use icons to distinguish between events.
 
 ```ts
-type EventTypes = "Change Quartet" | "Select Node" | "Hover Node"
+type EventTypes = "Add Todo" | "Select Todo"
 ```
 
 Now we are ready to setup Trrack itself!
 
 For Typescript
 ```ts
-let prov = initProvenance<NodeState, EventTypes, any>(initialState, { loadFromUrl: false });
+let prov = initProvenance<State, EventTypes, any>(initialState, { loadFromUrl: false });
 ```
 
 For Javascript
@@ -114,8 +112,8 @@ For the second parameter we pass in a config option `loadFromUrl`. We are settin
 Trrack takes advantage of an observer software design pattern. To identify changes that are made to the state, an observer must be assigned to that part of the state. For example, here is an empty observer which would be called when any changes are made to the "selectedQuartet" part of the previously defined state.
 
 ```ts
-prov.addObserver((state) => state.selectedQuartet, () => {
-  //Update visualization here
+prov.addObserver((state) => state.todos, () => {
+  // Update the todo list here
 });
 ```
 
@@ -125,16 +123,16 @@ So, instead of updating the visualization when a user makes changes, developers 
 
 First, we create a action.
 ```js
-  const changeQuartetAction = createAction((state, quartet) => {
-        state.selectedQuartet = quartet;
+  const addTodoAction = createAction((state, todo) => {
+        state.todos.push(todo);
       })
-        .setLabel("Changing Quartet");
+      .setLabel("Add Todo");
 ```
 
 Second, we pass in the arguments and apply the whenever we want to execute it.
 
 ```ts
-prov.apply(changeQuartetAction('new-quartet-name'))
+prov.apply(addTodoAction("New Todo"))
 ```
 
 When an action is applied, a new provenance node is created, and any observers whose state were changed are triggered. Thus, applying an action is indirectly updating the visualization, as you would expect when the quartet number is changed.
@@ -148,11 +146,11 @@ Labeling a created node as ephemeral has two main affects. First, it ensures tha
 To tag an action as ephemeral, we set it up when we create the action. If we wanted the earlierr example action to be epphemeral, it would look like this.
 
 ```js
-  const changeQuartetAction = createAction((state, quartet) => {
-        state.selectedQuartet = quartet;
+  const selectTodoAction = createAction((state, todoId) => {
+        state.selected = todoId;
       })
-        .setLabel("Changing Quartet")
-        .setActionType("Ephemeral");
+      .setLabel("Select Todo")
+      .setActionType("Ephemeral");
 ```
 
 # Adding Trrack-Vis
