edited blog text

--- a/_posts/2020-10-28-trrack.md
+++ b/_posts/2020-10-28-trrack.md
@@ -64,10 +64,23 @@ To install TrrackVis run:
 yarn add @visdesignlab/trrack-vis
 ```
 
+Or, you can load Trrack and its dependencies directly: 
+
+```javascript
+<script src="//cdn.jsdelivr.net/combine/npm/firebase@7/firebase-app.min.js,
+npm/firebase@7/firebase-database.min.js,
+npm/mobx@6/dist/mobx.umd.production.min.js,
+npm/lz-string@1/libs/lz-string.min.js,
+npm/deep-diff@1/dist/deep-diff.min.js,
+npm/@visdesignlab/trrack/dist/trrack.umd.production.min.js"></script>
+```
+
+
+
 
 ### How to Use Trrack
 
-To use trrack we show a minimal example of a todo list in vanilla JavasScript. We can add an item to the todo list and press undo to revert our action. Click on `Open Sandbox` to open an editable version and experiment.
+To use trrack we show a minimal example of a todo list in vanilla JavasScript. Here we track actions that (1) add items to the list, and (2) select existing items; and provide undo for these actions. Click on `Open Sandbox` to open an editable version to see the code and experiment.
 
 <iframe class="skip-absolute"  src="https://codesandbox.io/embed/basic-track-example-g2bsf?fontsize=12&hidenavigation=1&theme=light"
      style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;"
@@ -76,9 +89,9 @@ To use trrack we show a minimal example of a todo list in vanilla JavasScript. W
      sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
    ></iframe>
 
-To use Trrack, developers have to create and maintain a state for their application. This state should define variables for anything that designers would like to be tracked. Defining state explicitly is a critical part of implementing Trrack, but we often found that it also encourages good software engineering.
+To use Trrack, developers **have to create and maintain a state** for their application. This state should define variables for anything that designers would like to be tracked. Defining state explicitly is a critical part of implementing Trrack, but we often found that it also encourages good software engineering.
 
-State is usually a `javascript` object. If using `typescript` we can use `interface` or `type` to create a shape for our state as below. Here's an example where we track which dataset out of Anscombe's quartett shown, and which item is selected and hovered: 
+State is usually a `javascript` object. If using `typescript` we can use `interface` or `type` to create a shape for our state . Here's an example tracking todos, and which item is selected: 
 
 ```ts
 // Only if using typescript
@@ -101,7 +114,7 @@ let prov = initProvenance(initialState, { loadFromUrl: false });
 
 For the second parameter we pass in a config option `loadFromUrl`. We are setting this to `false`, it is `true` by default. We will talk about URL sharing later.
 
-Trrack takes advantage of an observer software design pattern. To identify changes that are made to the state, an observer must be assigned to that part of the state. For example, here is an empty observer which would be called when any changes are made to the "selectedQuartet" part of the previously defined state.
+Trrack takes advantage of an observer software design pattern. To identify changes that are made to the state, an observer must be assigned to that part of the state. For example, here is an empty observer which would be called when changes are made to the "todos" part of the previously defined state.
 
 ```ts
 prov.addObserver((state) => state.todos, () => {
@@ -109,9 +122,11 @@ prov.addObserver((state) => state.todos, () => {
 });
 ```
 
-The observers will be called when your state changes via changing the frontend, and also when your state changes via undo/redo or navigating through Trrack-Vis. Because of this we recommend only updating your visualization front-end within these observers, to avoid code-duplication and inconsistent changes.
+The observers will be called when your state changes – either because you're changing it because of a user action, or because undo/redo is called. 
+Because of this we **recommend only updating your visualization front-end within these observers**, to avoid code-duplication and inconsistent changes.
+So, instead of updating the visualization when a user makes changes, developers should add and apply a provenance action. The provenance library then calls the observer that changes the visualization.  
 
-So, instead of updating the visualization when a user makes changes, developers should add and apply a provenance action. This is where the user updates the state, adds a label or event type, and defines any desired metadata. This is also where more intricate customization happens, such as labeling a node as ephemeral or ensuring the node stores the entire state. Here's the example adding a new todo.
+When creating an action you can also add a label, specify an event type, or pass in metadata. Here's the example adding a new todo.
 
 First, we create a action.
 ```js
@@ -121,21 +136,19 @@ First, we create a action.
       .setLabel("Add Todo");
 ```
 
-Second, we pass in the arguments and apply it whenever we want to execute it.
+Second, we pass in the arguments and apply it when we want to execute it.
 
 ```js
 prov.apply(addTodoAction("New Todo"))
 ```
 
-When an action is applied, a new provenance node is created, and any observers whose state were changed are triggered. Thus, applying an action is indirectly updating the visualization, as you would expect when the quartet number is changed.
+When an action is applied, a new provenance node is created, and any observers whose state were changed are triggered. Thus, applying an action is indirectly updating the visualization.
 
-And that's it! For simple implementation that allows for undo/redo, that is everything required. However, there are still many helpful features that can be added to the basic implementation.
+And that's it! For a simple implementation that allows for undo/redo, that is everything required. However, there are still many helpful features that can be added to the basic implementation.
 
-# Ephemeral Nodes
+### Ephemeral Nodes
 
-Labeling a created node as ephemeral has two main affects. First, it ensures that the node is not included in the typical undo/redo chain. This is so certain actions which you may want to track, like hover actions or mouse movements, aren't included in undo/redo. Second, ephemeral nodes are automatically grouped in Trrack-Vis, so that they don't consume too much space.
-
-To tag an action as ephemeral, we set it up when we create the action. If we wanted the earlierr example action to be epphemeral, it would look like this.
+Sometimes we want to track things that we don't want on an undo/redo stack, for example for detailed logging. To do that, we can label actions as *ephemeral*. Ephemeral nodes are automatically grouped in Trrack-Vis so that they don't consume too much space.
 
 ```js
   const selectTodoAction = createAction((state, todoId) => {
@@ -145,9 +158,9 @@ To tag an action as ephemeral, we set it up when we create the action. If we wan
       .setActionType("Ephemeral");
 ```
 
-# Adding Trrack-Vis
+### Adding Trrack-Vis
 
-To add the simple, base version of Trrack-Vis is an easy one liner. The Library exports a "ProvVisCreator" function, which takes in the div that you want Trrack-Vis added to, your provenance graph from Trrack, and a callback function. Once Trrack-Vis is set up, it will automatically update when the Trrack provenance graph changes, and will change the current node in Trrack whenever a node in the graph is clicked.
+When you want to include provenance visualization, you can add Trrack-Vis is an easy one liner. The Library exports a `ProvVisCreator` function, which takes in the div that you want Trrack-Vis added to, your provenance graph from Trrack, and a callback function. Once Trrack-Vis is set up, it will automatically update when the Trrack provenance graph changes, and will change the current node in Trrack whenever a node in the graph is clicked.
 
 ```js
     const prov = initProvenance(state, config)
@@ -162,16 +175,19 @@ To add the simple, base version of Trrack-Vis is an easy one liner. The Library 
 
 This simple setup enables most features in Trrack-Vis. You can navigate the graph, as well as bookmark and annotate any node.
 
-Further customization, such as custom icons and node bundling is also available. These features are shown here, from the [intent project]({{site.base_url}}/publications/2020_preprint_intent/) which used Trrack. This example shows custom icons for nodes based on actions and custom bundling logic. For more information, see the [documentation](http://vdl.sci.utah.edu/trrack-examples/api/trrack-vis/). 
+You can customize Trrack-Vis with icons and logic to group nodes. Below is an example with custom icons and grouping, based on our [predicting intent project]({{site.base_url}}/publications/2020_preprint_intent/). For more information, see the [documentation](http://vdl.sci.utah.edu/trrack-examples/api/trrack-vis/). 
 
 ![Intent Trrack Vis]({{site.base_url}}/assets/images/posts/2020_intent-trrack-vis.png)
 
-# Enabling URL Sharing
+### Enabling URL Sharing
 
-To enable URL sharing, change the second parameter of initProvenance as shown earlier to true. Or, simply remove the parameter, and by default URL sharing will be enabled. The only further code required from the developer is a call to done() after the observers are setup, telling trrack that it is okay to load the state stored in the URL.
+A simple way of sharing something you did in an interactive web-based system is just copying a URL that contains the state and sending it to someone. Trrack makes this easy to achieve: just change the second parameter of initProvenance as shown earlier to true. Or, simply remove the parameter, and by default URL sharing will be enabled. The only further code required from the developer is a call to `done()` after the observers are setup, Telling trrack that it is okay to load the state stored in the URL.
 
 
-# Basic example with Typescript and d3
+### Basic example with Typescript and D3
+
+Here's an example using TypeScript and D3, where you can sort and select bar charts. 
+
 <iframe class="skip-absolute" src="https://codesandbox.io/embed/scatterplot-example-t0dd2?fontsize=14&hidenavigation=1&theme=light"
      style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;"
      title="scatterplot-example"
@@ -179,13 +195,10 @@ To enable URL sharing, change the second parameter of initProvenance as shown ea
      sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
    ></iframe>
 
-## Resources
+### Resources
 
-For the rest of the code for this example, as well as other examples, see [here](https://github.com/visdesignlab/trrack/tree/master/packages/trrack-examples).
-For deployed examples, see [here](http://vdl.sci.utah.edu/trrack)
+We have compiled more examples [here](https://github.com/visdesignlab/trrack/tree/master/packages/trrack-examples), live versions of those are hosted [here](http://vdl.sci.utah.edu/trrack)
 
-<!-- update these links after Kiran moves stuff -->
+If you're interested in using Trrack, also check out the documentation and code of the [Trrack](https://github.com/visdesignlab/trrack) and [Trrack-Vis Library](https://github.com/visdesignlab/trrack/tree/master/packages/trrack-vis). 
 
-[Trrack Library](https://github.com/visdesignlab/trrack)
-
-[Trrack-Vis Library](https://github.com/visdesignlab/trrack/tree/master/packages/trrack-vis)
+We hope Trrack is useful to you! Send [us feedback](mailto:alex@sci.utah.edu,kiran@sci.utah.edu,zculter@sci.utah.edu) or leave an issue on GitHub if you have any problems!
