--- a/_posts/2020-10-28-trrack.md
+++ b/_posts/2020-10-28-trrack.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Introducing Trrack - A Library for Tracking Provenance on the Web
+title: Introducing Trrack – A Library for Tracking Provenance on the Web
 date: 2020-10-28 09:00:00
 categories: blog
 type: blog
