Added optional lead-image to news feed on home page

--- a/_posts/2021-10-25-vdl-at-vis.md
+++ b/_posts/2021-10-25-vdl-at-vis.md
@@ -3,6 +3,8 @@ layout: post
 title: VDL at IEEE VIS 2021!
 date: 2021-10-25 10:00:00
 categories: event
+lead-image: /assets/images/posts/2021_vis_contribs.png
+abstract: We’re very excited about contributing to IEEE VIS again this year. Here’s a summary of the VDL activity.
 ---
 
 We’re very excited about contributing to [IEEE VIS](https://virtual.ieeevis.org/year/2021/index.html) again this year. Here’s a summary of the VDL activity:
