unifying lede images in blogs

--- a/_posts/2021-10-25-vdl-at-vis.md
+++ b/_posts/2021-10-25-vdl-at-vis.md
@@ -4,10 +4,9 @@ title: VDL at IEEE VIS 2021!
 date: 2021-10-25 10:00:00
 categories: event
 lead-image: /assets/images/posts/2021_vis_contribs.png
+lead-image-alt-text: Collage of VDL Contributions
 abstract: We’re very excited about contributing to IEEE VIS again this year. Here’s a summary of the VDL activity.
 ---
-
-![Collage of VDL Contributions]({{site.base_url}}/assets/images/posts/2021_vis_contribs.png)
 
 - Devin Lange will present his paper titled [ Loon: Using Exemplars to Visualize Large-Scale Microscopy Data ](https://loon.sci.utah.edu/). Congratulations to Devin for his **honorable mention for Best Paper**! Tune in to Devin’s talk at [ VIS 2021 on Friday, October 29th, 2021 at 10:30am CDT ](https://virtual.ieeevis.org/year/2021/session_v-full-full6.html).
 - Jimmy Moore will present his paper on [ Exploring the personal informatics analysis gap: "There's a lot of bacon" ](https://vdl.sci.utah.edu/publications/2021_vis_gap/). Check out the [ teaser ](https://www.youtube.com/watch?v=CYG3qVClPb0) for the paper and the very funny [ outtakes ](https://www.youtube.com/watch?v=8EKUTMKrhcQ). Tune in to Jimmy’s talk at [ VIS 2021 on Wednesday, October 27th, 2021 at 12:15pm CDT ](https://virtual.ieeevis.org/year/2021/session_v-full-full3.html).
