--- a/_posts/2020-10-28-trrack.md
+++ b/_posts/2020-10-28-trrack.md
@@ -12,10 +12,9 @@ authors:
 redirect_from:
 abstract: "Tracking a history of actions of an interactive visual analysis session (i.e., its provenance) has benefits ranging from simple undo/redo, to enabling reproducibility, to making post-hoc analysis of user sessions possible. However, there are no established provenance tracking libraries that visualization developers can use with their web-based tools. This blog post introduces Trrack – a web-based library designed for easy integration in existing and newly developed visualization systems."
 lead-image: /assets/images/posts/2020-10_infovis_trrack_teaser.png
+lead-image-alt-text: "Various visualization application that implement trrack, and a trrack provenance graph"
 ---
 
-
-![]({{site.baseurl}}/assets/images/posts/2020-10_infovis_trrack_teaser.png)
 
 How did we get to that particular analysis result? That’s a question that’s easy to answer when we do data analysis with scripting languages, such as R and Python. In fact, computational notebooks such as [Jupyter notebooks](https://jupyter.org/), [Observable](https://observablehq.com/), or [R Markdown](https://rmarkdown.rstudio.com/) have come remarkably far in fulfilling Knuth’s vision of [literate programming](https://en.wikipedia.org/wiki/Literate_programming) – programming that emphasizes readability and understandability.
 
