fix broken links

--- a/_posts/2022-04-27-loon.md
+++ b/_posts/2022-04-27-loon.md
@@ -49,6 +49,6 @@ _Exemplars for three different drug treatments (conditions). Each condition show
 
 This approach of carefully selecting representative data points and showing them in their “raw” format could also be applied to other kinds of data. This is particularily valuable if the data has contextual aspects (like the shape of the cells and the quality of the segmentation in our example) that are not easy to fully quantify or summarize, and the dataset is large enough where manual inspection is no longer practical.
 
-We published a paper describing this technique at last year’s VIS conference. We’re also very excited that the paper won an **honorable mention for best paper**! If you’re interested, check out the details in [the paper](link) or watch a recording of the [conference presentation](link).
+We published a paper describing this technique at last year’s VIS conference. We’re also very excited that the paper won an **honorable mention for best paper**! If you’re interested, check out the details in [the paper](https://sci.utah.edu/~vdl/papers/2021_vis_loon.pdf) or watch a recording of the [conference presentation](https://youtu.be/Xz5VrBXk5J0).
 
 **Bonus content!** We have had a few people ask where the name Loon comes from for the tool. This is maybe more common because it is not explained in the paper. During the brainstorming process we thought about our collaborators’ microscopes. These measure the phase shift of light as it passes through cells to calculate the mass of those cells. Since the moon emits light, and also goes through phases we tried a number of lunar-esque names. Eventually we just dropped this to “Loon”. To me this holds an extra meaning because Loons are the state bird of Minnesota, my home state.
