Ignore some a tags that html proofer doesn't like

--- a/_posts/2020-10-28-trrack.md
+++ b/_posts/2020-10-28-trrack.md
@@ -200,4 +200,4 @@ We have compiled more examples [here](https://github.com/visdesignlab/trrack/tre
 
 If you're interested in using Trrack, also check out the documentation and code of the [Trrack](https://github.com/visdesignlab/trrack) and [Trrack-Vis Library](https://github.com/visdesignlab/trrack/tree/master/packages/trrack-vis). 
 
-We hope Trrack is useful to you! Send [us feedback](mailto:alex@sci.utah.edu,kiran@sci.utah.edu,zculter@sci.utah.edu) or leave an issue on GitHub if you have any problems!
+We hope Trrack is useful to you! <a href="mailto:alex@sci.utah.edu,kiran@sci.utah.edu,zculter@sci.utah.edu" data-proofer-ignore>Send us feedback</a> or leave an issue on GitHub if you have any problems!
