--- a/_posts/2022-10-12-VDL_at_vis.md
+++ b/_posts/2022-10-12-VDL_at_vis.md
@@ -3,6 +3,8 @@ layout: post
 title:  VDL at IEEE VIS!
 date:   2022-10-12 12:00:00
 categories: event
+lead-image: /assets/images/posts/2022_vis_contribs.png
+lead-image-alt-text: Collage of VDL Contributions
 # lead-image: /assets/images/publications/2022_vis_data_hunches_teaser.png adding an image later.
 ---
 Seven VDL lab members are back in person at IEEE VIS this year! We especially look forward to co-host the Utah Party together with other [SCI](https://sci.utah.edu/) members on Tuesday night at [Social Capital](https://www.google.com/maps/place/Social+Capital/@35.4604756,-97.5219633,17z/data=!4m12!1m6!3m5!1s0x87b2175bd595ad71:0x19461695792a3526!2sSocial+Capital!8m2!3d35.4604713!4d-97.5197746!3m4!1s0x87b2175bd595ad71:0x19461695792a3526!8m2!3d35.4604713!4d-97.5197746)! Make sure to say hi, come to our talks and to the party.
