add timezone on vdl news

--- a/_posts/2022-10-12-VDL_at_vis.md
+++ b/_posts/2022-10-12-VDL_at_vis.md
@@ -11,7 +11,7 @@ Seven VDL lab members are back in person at IEEE VIS this year! We especially lo
 
 Our activities are:
 
-* Haihan Lin is presenting her paper [Data Hunches: Incorporating Personal Knowledge into Visualizations]({{site.base_url}}/publications/2022_vis_data_hunches/) on Wednesday Oct 19th, 2-3:15PM.
+* Haihan Lin is presenting her paper [Data Hunches: Incorporating Personal Knowledge into Visualizations]({{site.base_url}}/publications/2022_vis_data_hunches/) on Wednesday Oct 19th, 2-3:15 PM CDT.
 * Moataz Abdelaal, who is visiting from the University of Stuttgart, is presenting his paper [Visualization for Architecture, Engineering, and Construction: Shaping the Future of Our Built World](https://ieeexplore.ieee.org/document/9709159) on Wednesday, Oct 19th, 3:45-5 PM CDT.
 * Moataz is also presenting his paper [Comparative Evaluation of Bipartite, Node-Link, and Matrix-Based Network Representations](https://ieeexplore.ieee.org/abstract/document/9908291) on Thursday, Oct 20th, 10:45-12 PM CDT.
 * Alex Lex is on the panel for [Is This (Panel) Good Enough for IEEE VIS?](http://ieeevis.org/year/2022/info/panels) on Friday, Oct 9-10:15 AM CDT.
