--- a/_posts/2022-10-28-intent.md
+++ b/_posts/2022-10-28-intent.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Can we guess why you selected something in a scatterplot?
+title: Can We Guess Why you Selected Something in a Scatterplot?
 date: 2022-10-28 1:00:00
 categories: blog
 type: blog
