adding papers to the end of paper blog posts

--- a/_posts/2020-10-28-trrack.md
+++ b/_posts/2020-10-28-trrack.md
@@ -10,6 +10,7 @@ authors:
   - lex
 
 redirect_from:
+publication_key: 2020_visshort_trrack
 abstract: "Tracking a history of actions of an interactive visual analysis session (i.e., its provenance) has benefits ranging from simple undo/redo, to enabling reproducibility, to making post-hoc analysis of user sessions possible. However, there are no established provenance tracking libraries that visualization developers can use with their web-based tools. This blog post introduces Trrack – a web-based library designed for easy integration in existing and newly developed visualization systems."
 lead-image: /assets/images/posts/2020-10_infovis_trrack_teaser.png
 lead-image-alt-text: "Various visualization application that implement trrack, and a trrack provenance graph"
