--- a/_posts/2022-04-27-loon.md
+++ b/_posts/2022-04-27-loon.md
@@ -8,6 +8,7 @@ type: blog
 authors:
   - lange
   - lex
+publication_key: 2021_vis_loon
 # redirect_from:
 # - "/event/2020/07/20/state-dashboards/"
 # Use the abstract to provide a high-level overview of the blog post and main takeaways.
