--- a/_posts/2022-10-28-intent.md
+++ b/_posts/2022-10-28-intent.md
@@ -7,7 +7,7 @@ type: blog
 authors:
 - kiran
 - lex
-
+publication_key: 2021_ivi_intent
 abstract: "Selections are a key interaction in data visualization. They are used for highlighting and as the starting point for subsequent actions, including filters, group assignments, etc. Capturing the intent – WHY were these items selected? –  can be used to help users refine their selections and to keep a meaningful history of the analysis process. This post discusses our paper on techniques to capture such intents.
 "
 lead-image: /assets/images/posts/2021_infovis_intent_lead.png
