Added addendum to Trrack blog

--- a/_posts/2020-10-28-trrack.md
+++ b/_posts/2020-10-28-trrack.md
@@ -202,3 +202,7 @@ We have compiled more examples [here](https://github.com/visdesignlab/trrack/tre
 If you're interested in using Trrack, also check out the documentation and code of the [Trrack](https://github.com/visdesignlab/trrack) and [Trrack-Vis Library](https://github.com/visdesignlab/trrack/tree/master/packages/trrack-vis). 
 
 We hope Trrack is useful to you! <a href="mailto:alex@sci.utah.edu,kiran@sci.utah.edu,zculter@sci.utah.edu" data-proofer-ignore>Send us feedback</a> or leave an issue on GitHub if you have any problems!
+
+### Update --- Trrack v2
+
+Trrack supported state-based provenance tracking very well. We are excited to announce Trrack v2 which introduces a hybrid approach to provenance tracking, where you can mix between state-based tracking and action-based tracking. Be on the lookout for a new blog which discusses the changes and design decisions in Trrack v2. Meanwhile [click here](https://trrackjs.vercel.app/) to read more.
