Updated alt-text for intent & reusing lead images

--- a/_posts/2022-10-28-intent.md
+++ b/_posts/2022-10-28-intent.md
@@ -11,6 +11,7 @@ publication_key: 2021_ivi_intent
 abstract: "Selections are a key interaction in data visualization. They are used for highlighting and as the starting point for subsequent actions, including filters, group assignments, etc. Capturing the intent – WHY were these items selected? –  can be used to help users refine their selections and to keep a meaningful history of the analysis process. This post discusses our paper on techniques to capture such intents.
 "
 lead-image: /assets/images/posts/2021_infovis_intent_lead.png
+lead-image-alt-text: Figure shows the techinque for predicting intent. First step shows a scatterplot with a brush selection, captioned 'Selection' with a small human silhouette. Second step shows stacked scatterplots with a cluster selected. The caption reads 'Predictions' with small robot face. Third step shows list of three patters - Range, cluster and outlier with bars beside each to show ranking. Cluster pattern is selected with orange background. The caption reads 'Ranking' and shows a small robot face. The fourth step shows a scatterplot with a cluster selected. One of the points is highlighted in orange. The caption reads 'Confirming intent & annotation' with a human silhouette.
 ---
 _For the publication, and prototype for predicting intent techniques, please see [Predicting Intent Behind Selections in Scatterplot Visualizations]({{site.base_url}}/publications/2021_ivi_intent)._
 
