adding last sentence

--- a/_posts/2023-09-13-ferret.md
+++ b/_posts/2023-09-13-ferret.md
@@ -85,3 +85,7 @@ For work of this nature, it is especially important to consider the ethical impl
 Another concern is that people who are manipulating data could use Ferret to make them harder to detect. While some bad actors may do this, the same argument can be made for plagiarism detection tools, and yet they still catch instances of plagiarism year after year after year. However, I hope that making it clear that artifacts of manipulation can be detected may deter authors from manipulating their data in the first place.
 Conclusion
 While I believe that most scientists do work hard to improve society, this project has revealed the unfortunate reality that some cheat. We, as a scientific community, can and should do more to prevent this from happening. I have taken an initial step to help prevent the manipulation of tabular datasets with my work and encourage you to consider how you could do the same.
+
+### Try Out Ferret
+
+If I've piqued your interest, make sure to head over to the [Ferret page](https://ferret.sci.utah.edu/) to try out the tool yourself!
