add correction about ferrets not being rodents

--- a/_posts/2023-09-15-ferret.md
+++ b/_posts/2023-09-15-ferret.md
@@ -28,7 +28,7 @@ Imagine I had a time machine, and for the sake of this blog, I decided to tell P
 
 The story of Dr. Kate Laskowski was especially inspirational for my project. As an early career faculty member, she began a collaboration with a prominent member of her field, who provided a tabular dataset that they used in a publication. Later, she determined that the data could not be trusted. She found strong signs that the data was manipulated. In this incredibly difficult situation, she decided to [publish her story](https://laskowskilab.faculty.ucdavis.edu/2020/01/29/retractions/). Her story also includes rich details about the “data forensics” required to investigate a tabular dataset for fraud. Seeing the patterns and methods used in this case showed me two ways that I could help with the process. First, in hindsight, some of the patterns left behind by manipulation may seem very obvious, but Dr. Laskowsi and others agree that “until you know what to look for, the patterns are not obvious.” Second, although it is possible to find these patterns in existing tools like Excel, it can be quite laborious.
 
-To help identify cases like this more readily, I started a research project. First, I collected and organized common patterns that arise when data has been manipulated, which I call Artifacts of Manipulation. Second, I developed design guidelines for visualization tools that help identify these patterns. Finally, I implemented [Ferret](https://ferret.sci.utah.edu/), an open source tool based on these guidelines. If you are wondering why I named my tool after ugly cute rodents, it’s because it helps [ferret out](https://idioms.thefreedictionary.com/ferret+out) the truth in datasets. And I like to name my tools after cute animals. But mostly the former.
+To help identify cases like this more readily, I started a research project. First, I collected and organized common patterns that arise when data has been manipulated, which I call Artifacts of Manipulation. Second, I developed design guidelines for visualization tools that help identify these patterns. Finally, I implemented [Ferret](https://ferret.sci.utah.edu/), an open source tool based on these guidelines. If you are wondering why I named my tool after ugly cute ~~rodents~~ (members of the weasel family)[^1], it’s because it helps [ferret out](https://idioms.thefreedictionary.com/ferret+out) the truth in datasets. And I like to name my tools after cute animals. But mostly the former.
 
 ### Artifacts of Manipulation
 
@@ -89,3 +89,7 @@ While I believe that most scientists do work hard to improve society, this proje
 ### Try Out Ferret
 
 If I've piqued your interest, make sure to head over to the [Ferret page](https://ferret.sci.utah.edu/) to try out the tool yourself!
+
+### Corrections
+
+[^1]: I've been informed that ferrets are not actually rodents. Thanks to @biogeo@mefi.social for pointing this out to me on Mastadon. By the way I'm on Mastadon now. [Follow me](https://vis.social/@dev_lange). Do it. I'll probably post like twice a year.
