Use apps.vdl.sci.utah.edu/trrack for trrack docs

--- a/_posts/2020-10-28-trrack.md
+++ b/_posts/2020-10-28-trrack.md
@@ -205,4 +205,4 @@ We hope Trrack is useful to you! <a href="mailto:alex@sci.utah.edu,kiran@sci.uta
 
 ### Update --- Trrack v2
 
-Trrack supported state-based provenance tracking very well. We are excited to announce Trrack v2 which introduces a hybrid approach to provenance tracking, where you can mix between state-based tracking and action-based tracking. Be on the lookout for a new blog which discusses the changes and design decisions in Trrack v2. Meanwhile [click here](https://trrackjs.vercel.app/) to read more.
+Trrack supported state-based provenance tracking very well. We are excited to announce Trrack v2 which introduces a hybrid approach to provenance tracking, where you can mix between state-based tracking and action-based tracking. Be on the lookout for a new blog which discusses the changes and design decisions in Trrack v2. Meanwhile [click here](https://apps.vdl.sci.utah.edu/trrack/) to read more.
